<resources>
    <string name="app_name">Fitness training</string>
    <string name="slogan">У тебя получится!</string>
    <string name="go">Переход к тренировке</string>
    <string name="heading">Тренировка</string>
    <string name="startExercise">Начать тренировку</string>
    <string name="exercise">Упражнение</string>
    <string name="name_exercise">Название тренировки</string>
    <string name="time">Время</string>
    <string name="next">Продолжить дальше</string>
    <string name="exit">Выход</string>
    <string name="notAllFieldsAreFilledIn">Заполните все поля</string>
    <string name="startCoaching">Начать тренировку</string>
    <string name="trainingProcess">Процесс тренировки</string>
    <string name="endCoaching">Тренировка завершена</string>
    <string name="start_again">Начать снова</string>

</resources>