<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExerciseActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExerciseTB"
        android:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        android:background="@color/toolbar_background"
        tools:ignore="MissingConstraints"/>


    <TextView
        android:id="@+id/headingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/startBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startExercise"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/exerciseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:textSize="24sp"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:layout_margin="10dp"/>


    <TextView
        android:id="@+id/timeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="24sp"
        android:layout_margin="10dp"/>


    <Button
        android:id="@+id/nextBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:enabled="false"
        android:layout_margin="10dp"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/exerciseGIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        />

</LinearLayout>